--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 
 <body>
   <div id="root"></div>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.getRegistrations().then(regs => {
+        regs.forEach(reg => {
+          if (reg.scope.includes('/')) {
+            reg.unregister();
+          }
+        });
+      });
+    }
+  </script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
